2011-05-13  NIIBE Yutaka  <gniibe@fsij.org>

	* Version 0.12.

2011-05-12  NIIBE Yutaka  <gniibe@fsij.org>

	* src/openpgp.c (cmd_pso, cmd_internal_authenticate)
	(cmd_update_binary, cmd_write_binary): Don't check pw locked.

	* tool/dfuse.py (DFU_STM32.verify): Add missing colon.
	* tool/dfuse.py (get_device): Restrict to STMicro DfuSe.

	* tool/gnuk_put_binary.py (main): Add -p option to enter password.

	* src/ac.c (verify_user_0): New.
	(verify_pso_cds, verify_admin_0): Use verify_user_0.
	* src/openpgp.c (cmd_change_password): Use verify_user_0.

	* src/random.c (get_salt): Rename from get_random.
	(random_bytes_get, random_bytes_free): It's 16-byte.

	* src/ac.c (verify_admin_0): Use PW_ERR_PW1 counter when
	authenticated by PW1.

2011-05-11  NIIBE Yutaka  <gniibe@fsij.org>

	* src/ac.c (verify_pso_cds, verify_other): Fail (with no counter
	update) if key is not registered yet.
	(verify_admin_0): Compare to OPENPGP_CARD_INITIAL_PW3 when empty
	PW3 and non-empty PW1 but signing key is not registered yet.

	* tool/gnuk_put_binary.py: New implementation by pyscard.

	* src/main.c (device_initialize_once): New.
	* src/usb_prop.c (gnukStringSerial): Move to...
	* src/usb_desc.c (gnukStringSerial): here.  Bump version to 0.12.
	Fill by 0xff.
	* src/usb_prop.c (gnuk_device_init)
	(gnuk_device_GetStringDescriptor): Don't use RAM for
	gnukStringSerial, use ROM like other string descriptor.
	* src/usb_desc.c (String_Descriptor): Add gnukStringSerial.

	* src/openpgp-do.c (gpg_get_pw1_lifetime): Make static.
	(gpg_do_load_prvkey, gpg_do_write_prvkey): Use kdi.
	(gpg_increment_digital_signature_counter): Call gpg_get_pw1_lifetime.
	* src/openpgp.c (cmd_pso): Follow the change.
	* src/flash.c (keystore_pool): Remove.  Use &_keystore_pool.
	* src/ac.c (auth_status): Don't assign 0 as it's automatically
	cleared.

2011-05-10  NIIBE Yutaka  <gniibe@fsij.org>

	* src/openpgp-do.c (gpg_pw_locked): Rename from gpg_passwd_locked.