@@ -1,10 +1,10 @@
-#define GPG_MEMORY_FAILURE()		write_res_apdu (NULL, 0, 0x65, 0x81)
-#define GPG_SECURITY_FAILURE()		write_res_apdu (NULL, 0, 0x69, 0x82)
-#define GPG_SECURITY_AUTH_BLOCKED()	write_res_apdu (NULL, 0, 0x69, 0x83)
-#define GPG_COMMAND_NOT_ALLOWED()	write_res_apdu (NULL, 0, 0x69, 0x86)
-#define GPG_NO_FILE()			write_res_apdu (NULL, 0, 0x6a, 0x82)
-#define GPG_NO_RECORD()			write_res_apdu (NULL, 0, 0x6a, 0x88)
-#define GPG_BAD_P0_P1()			write_res_apdu (NULL, 0, 0x6b, 0x00)
-#define GPG_NO_INS() 			write_res_apdu (NULL, 0, 0x6d, 0x00)
-#define GPG_ERROR()			write_res_apdu (NULL, 0, 0x6f, 0x00)
-#define GPG_SUCCESS()			write_res_apdu (NULL, 0, 0x90, 0x00)
+#define GPG_MEMORY_FAILURE()		set_res_apdu (0x65, 0x81)
+#define GPG_SECURITY_FAILURE()		set_res_apdu (0x69, 0x82)
+#define GPG_SECURITY_AUTH_BLOCKED()	set_res_apdu (0x69, 0x83)
+#define GPG_COMMAND_NOT_ALLOWED()	set_res_apdu (0x69, 0x86)
+#define GPG_NO_FILE()			set_res_apdu (0x6a, 0x82)
+#define GPG_NO_RECORD()			set_res_apdu (0x6a, 0x88)
+#define GPG_BAD_P0_P1()			set_res_apdu (0x6b, 0x00)
+#define GPG_NO_INS() 			set_res_apdu (0x6d, 0x00)
+#define GPG_ERROR()			set_res_apdu (0x6f, 0x00)
+#define GPG_SUCCESS()			set_res_apdu (0x90, 0x00)
