@@ -1,3 +1,8 @@
+2011-05-16  NIIBE Yutaka  <gniibe@fsij.org>
+
+	* src/openpgp.c (cmd_select_file): Don't use write_res_apdu.
+	(set_res_apdu): Rename from write_res_apdu.  Just SW1 and SW2.
+
 2011-05-13  NIIBE Yutaka  <gniibe@fsij.org>
 
 	* Version 0.12.
